ui_tests/fn_calls_7.box
fn foo[T](a: T) -> T {
    a
}

type Blah {}
type Awk {}

fn bar() {
    foo(new Awk {});
}